--- a/public_html/js/documento/plist.html
+++ b/public_html/js/documento/plist.html
@@ -50,36 +50,36 @@ THE SOFTWARE.
                                             <div class="row">
                                                 <div class="col-lg-3 col-md-3 col-sm-12">
                                                     <p>Mostrando una consulta de {{registers}} registros.</p>
-                                                    <p ng-show="orderParams == ''">Contenido no ordenado</p>
-                                                    <p ng-show="orderParams != ''"><small>Contenido ordenado por {{orderParams}} <a href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?a=a{{filterParamsURL}}{{sfilterParamsURL}}" id="linkQuitarOrden">(Quitar orden)</a></small></p>
-                                                    <p ng-show="filterParams == ''">Contenido no filtrado</p>
-                                                    <p ng-show="filterParams != ''"><small>Contenido filtrado ({{filterParams}}) <a href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?a=a{{orderParamsURL}}{{sfilterParamsURL}}" id="linkQuitarFiltro">(Quitar filtro)</a></small></p>
+                                                    <p ng-show="orderParams == null">Contenido no ordenado</p>
+                                                    <p ng-show="orderParams != null"><small>Contenido ordenado por {{orderParams}} <a ng-click="doresetorder()" id="linkQuitarOrden">(Quitar orden)</a></small></p>
+                                                    <p ng-show="filterParams == null">Contenido no filtrado</p>
+                                                    <p ng-show="filterParams != null"><small>Contenido filtrado ({{filterParams}}) <a ng-click="doresetfilter()" id="linkQuitarFiltro">(Quitar filtro)</a></small></p>
                                                 </div>
 
                                                 <div class="col-lg-6  col-md-6 col-sm-8 text-center">
                                                     Paginación: <br>
                                                     <ul class="pagination">
-                                                        <li><a class="pagination_link" ng-show="numpage > 1" ng-attr-id="{{numpage - 1}}" ng-attr-href="{{'#/' + ob + '/' + op + '/' + (numpage - 1) + '/' + rpp + params}}">prev</a></li>
-                                                        <li><a class="pagination_link" id="1" ng-attr-href="{{'#/' + ob + '/' + op + '/1/' + rpp + params}}" ng-show="numpage > neighbourhood + 1">1</a></li>
+                                                        <li><a class="pagination_link" ng-show="numpage > 1" ng-attr-id="{{numpage - 1}}" ng-click="gotopage(numpage - 1)">prev</a></li>
+                                                        <li><a class="pagination_link" id="1" ng-click="gotopage(1)" ng-show="numpage > neighbourhood + 1">1</a></li>
 
-                                                        <li class="pagination_link disabled"><a href="#" ng-show="numpage > neighbourhood - -2">ooo</a></li>
+                                                        <li class="pagination_link disabled"><a ng-show="numpage > neighbourhood - -2">ooo</a></li>
 
                                                         <li ng-repeat="i in getRangeArray(evaluateMax(1, numpage - neighbourhood), (numpage - 1))">
-                                                            <a class="pagination_link" ng-attr-id="{{i}}" ng-attr-href="{{'#/' + ob + '/' + op + '/' + i + '/' + rpp + params}}">{{i}}</a>
+                                                            <a class="pagination_link" ng-attr-id="{{i}}" ng-click="gotopage(i)">{{i}}</a>
                                                         </li>
 
                                                         <li class="active" ng-show="(numpage >= 1) && (numpage <= pages)">
-                                                            <a class="pagination_link" ng-attr-id="{{numpage}}" ng-attr-href="{{'#/' + ob + '/' + op + '/' + numpage + '/' + rpp + params}}">{{numpage}}</a>
+                                                            <a class="pagination_link" ng-attr-id="{{numpage}}" ng-click="gotopage(numpage)">{{numpage}}</a>
                                                         </li>
 
                                                         <li ng-repeat="j in getRangeArray(numpage - -1, evaluateMin(numpage - -neighbourhood, pages))">
-                                                            <a class="pagination_link" ng-attr-id="{{j}}" ng-attr-href="{{'#/' + ob + '/' + op + '/' + j + '/' + rpp + params}}">{{j}}</a>
+                                                            <a class="pagination_link" ng-attr-id="{{j}}" ng-click="gotopage(j)">{{j}}</a>
                                                         </li>
 
-                                                        <li class="pagination_link disabled"><a href="#" ng-show="numpage < (pages - (neighbourhood - -1))">ooo</a></li>
+                                                        <li class="pagination_link disabled"><a ng-show="numpage < (pages - (neighbourhood - -1))">ooo</a></li>
 
-                                                        <li><a class="pagination_link" ng-show="numpage < pages - neighbourhood" ng-attr-id="{{pages}}" ng-attr-href="{{'#/' + ob + '/' + op + '/' + pages + '/' + rpp + params}}">{{pages}}</a></li>
-                                                        <li><a class="pagination_link" ng-show="numpage < pages" ng-attr-id="{{numpage - -1}}" ng-attr-href="{{'#/' + ob + '/' + op + '/' + (numpage - -1) + '/' + rpp + params}}">next</a></li>
+                                                        <li><a class="pagination_link" ng-show="numpage < pages - neighbourhood" ng-attr-id="{{pages}}" ng-click="gotopage(pages)">{{pages}}</a></li>
+                                                        <li><a class="pagination_link" ng-show="numpage < pages" ng-attr-id="{{numpage - -1}}" ng-click="gotopage(numpage - - 1)">next</a></li>
 
                                                     </ul>
                                                 </div>
@@ -188,74 +188,73 @@ THE SOFTWARE.
                                 <thead>             
                                     <tr>                                                   
                                         <th ng-show="visibles.id" class="text-center">
-                                            Identificador<br/>
-                                            <a ng-show="visibles.id" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=asc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-up"></i></a>
-                                            <a ng-show="visibles.id" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=desc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-down"></i></a>
-
+                                            Identificador<br/>                                                                                        
+                                            <a ng-show="visibles.id" ng-click="doorder('id', 'asc')"><i class="glyphicon glyphicon-arrow-up"></i></a>
+                                            <a ng-show="visibles.id" ng-click="doorder('id', 'desc')"><i class="glyphicon glyphicon-arrow-down"></i></a>                                                                                     
                                         </th>
                                         <th ng-show="visibles.titulo"  class="text-center">
                                             Título<br/>
-                                            <a ng-show="visibles.titulo" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=asc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-up"></i></a>
-                                            <a ng-show="visibles.titulo" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=desc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-down"></i></a>
+                                            <a ng-show="visibles.titulo" ng-click="doorder('titulo', 'asc')"><i class="glyphicon glyphicon-arrow-up"></i></a>
+                                            <a ng-show="visibles.titulo" ng-click="doorder('titulo', 'desc')"><i class="glyphicon glyphicon-arrow-down"></i></a>
                                         </th>
                                         <th ng-show="visibles.contenido"  class="text-center">
                                             Contenido<br/>
-                                            <a ng-show="visibles.contenido" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=asc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-up"></i></a>
-                                            <a ng-show="visibles.contenido" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=desc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-down"></i></a>
+                                            <a ng-show="visibles.contenido" ng-click="doorder('contenido', 'desc')"><i class="glyphicon glyphicon-arrow-up"></i></a>
+                                            <a ng-show="visibles.contenido" ng-click="doorder('contenido', 'desc')"><i class="glyphicon glyphicon-arrow-down"></i></a>
 
                                         </th>
                                         <th ng-show="visibles.alta" class="text-center">
                                             Alta<br/>
-                                            <a ng-show="visibles.alta" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=asc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-up"></i></a>
-                                            <a ng-show="visibles.alta" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=desc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-down"></i></a>
+                                            <a ng-show="visibles.alta" ng-click="doorder('alta', 'asc')"><i class="glyphicon glyphicon-arrow-up"></i></a>
+                                            <a ng-show="visibles.alta" ng-click="doorder('alta', 'desc')"><i class="glyphicon glyphicon-arrow-down"></i></a>
 
                                         </th>
                                         <th ng-show="visibles.cambio" class="text-center">
                                             Último cambio<br/>
-                                            <a ng-show="visibles.cambio" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=asc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-up"></i></a>
-                                            <a ng-show="visibles.cambio" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=desc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-down"></i></a>
+                                            <a ng-show="visibles.cambio" ng-click="doorder('cambio', 'asc')"><i class="glyphicon glyphicon-arrow-up"></i></a>
+                                            <a ng-show="visibles.cambio" ng-click="doorder('cambio', 'desc')"><i class="glyphicon glyphicon-arrow-down"></i></a>
 
                                         </th>
-                                        <th ng-show="visibles.hits" class="text-center"">
+                                        <th ng-show="visibles.hits" class="text-center">
                                             Visitas<br/>
-                                            <a ng-show="visibles.hits" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=asc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-up"></i></a>
-                                            <a ng-show="visibles.hits" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=desc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-down"></i></a>
+                                            <a ng-show="visibles.hits" ng-click="doorder('hits', 'asc')"><i class="glyphicon glyphicon-arrow-up"></i></a>
+                                            <a ng-show="visibles.hits" ng-click="doorder('hits', 'desc')"><i class="glyphicon glyphicon-arrow-down"></i></a>
 
                                         </th>
                                         <th ng-show="visibles.id_usuario" class="text-center">
                                             Usuario<br/>
-                                            <a ng-show="visibles.id_usuario" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=asc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-up"></i></a>
-                                            <a ng-show="visibles.id_usuario" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=desc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-down"></i></a>
+                                            <a ng-show="visibles.id_usuario" ng-click="doorder('id_usuario', 'asc')"><i class="glyphicon glyphicon-arrow-up"></i></a>
+                                            <a ng-show="visibles.id_usuario" ng-click="doorder('id_usuario', 'desc')"><i class="glyphicon glyphicon-arrow-down"></i></a>
 
                                         </th>
                                         <th ng-show="visibles.id_tipodocumento" class="text-center">
                                             Tipo<br/>
-                                            <a ng-show="visibles.id_tipodocumento" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=asc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-up"></i></a>
-                                            <a ng-show="visibles.id_tipodocumento" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=desc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-down"></i></a>
+                                            <a ng-show="visibles.id_tipodocumento" ng-click="doorder('id_tipodocumento', 'asc')"><i class="glyphicon glyphicon-arrow-up"></i></a>
+                                            <a ng-show="visibles.id_tipodocumento" ng-click="doorder('id_tipodocumento', 'desc')"><i class="glyphicon glyphicon-arrow-down"></i></a>
 
                                         </th>
                                         <th ng-show="visibles.etiquetas" class="text-center">
                                             Etiquetas<br/>
-                                            <a ng-show="visibles.etiquetas" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=asc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-up"></i></a>
-                                            <a ng-show="visibles.etiquetas" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=desc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-down"></i></a>
+                                            <a ng-show="visibles.etiquetas" ng-click="doorder('etiquetas', 'asc')"><i class="glyphicon glyphicon-arrow-up"></i></a>
+                                            <a ng-show="visibles.etiquetas" ng-click="doorder('etiquetas', 'desc')"><i class="glyphicon glyphicon-arrow-down"></i></a>
 
                                         </th>
                                         <th ng-show="visibles.publicado" class="text-center">
                                             ¿Publicado?<br/>
-                                            <a ng-show="visibles.publicado" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=asc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-up"></i></a>
-                                            <a ng-show="visibles.publicado" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=desc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-down"></i></a>
+                                            <a ng-show="visibles.publicado" ng-click="doorder('publicado', 'asc')"><i class="glyphicon glyphicon-arrow-up"></i></a>
+                                            <a ng-show="visibles.publicado" ng-click="doorder('publicado', 'desc')"><i class="glyphicon glyphicon-arrow-down"></i></a>
 
                                         </th>
                                         <th ng-show="visibles.portada" class="text-center">
                                             ¿Portada?<br/>
-                                            <a ng-show="visibles.portada" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=asc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-up"></i></a>
-                                            <a ng-show="visibles.portada" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=desc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-down"></i></a>
+                                            <a ng-show="visibles.portada" ng-click="doorder('portada', 'asc')"><i class="glyphicon glyphicon-arrow-up"></i></a>
+                                            <a ng-show="visibles.portada" ng-click="doorder('portada', 'desc')"><i class="glyphicon glyphicon-arrow-down"></i></a>
 
                                         </th>
                                         <th ng-show="visibles.destacado" class="text-center">
                                             ¿Destacado?<br/>
-                                            <a ng-show="visibles.destacado" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=asc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-up"></i></a>
-                                            <a ng-show="visibles.destacado" href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=desc{{paramsWithoutOrder}}"><i class="glyphicon glyphicon-arrow-down"></i></a>
+                                            <a ng-show="visibles.destacado" ng-click="doorder('destacado', 'asc')"><i class="glyphicon glyphicon-arrow-up"></i></a>
+                                            <a ng-show="visibles.destacado" ng-click="doorder('destacado', 'desc')"><i class="glyphicon glyphicon-arrow-down"></i></a>
 
                                         </th>
                                         <th  class="text-center">Acciones</th>
