--- a/public_html/js/documento/plist.html
+++ b/public_html/js/documento/plist.html
@@ -199,7 +199,7 @@ THE SOFTWARE.
                                         </th>
                                         <th ng-show="visibles.contenido"  class="text-center">
                                             Contenido<br/>
-                                            <a ng-show="visibles.contenido" ng-click="doorder('contenido', 'desc')"><i class="glyphicon glyphicon-arrow-up"></i></a>
+                                            <a ng-show="visibles.contenido" ng-click="doorder('contenido', 'asc')"><i class="glyphicon glyphicon-arrow-up"></i></a>
                                             <a ng-show="visibles.contenido" ng-click="doorder('contenido', 'desc')"><i class="glyphicon glyphicon-arrow-down"></i></a>
 
                                         </th>
