--- a/public_html/js/tipodocumento/view.html
+++ b/public_html/js/tipodocumento/view.html
@@ -50,14 +50,10 @@ THE SOFTWARE.
                                 <div class="text-right" > 
                                     <a class="btn btn-primary" href="#/tipodocumento/edit/{{bean.id}}">Editar</a>
                                     <a class="btn btn-danger" href="#/tipodocumento/remove/{{bean.id}}">Borrar</a>
-                                    <a class="btn btn-default" ng-click="back()">Volver</a>
+                                    <a class="btn btn-default" ng-click="back()">Cerrar</a>
                                 </div>
                             </div>
                         </div>
-
-
-
-
                     </div>
                 </div>
             </div>     
