documento new date & foreigns OK

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -115,9 +115,10 @@
         <script src="vendor/angular/angular-sanitize.min.js" type="text/javascript"></script>
         <script src="vendor/angular/angular-route.min.js" type="text/javascript"></script>
         <script src="vendor/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
-        <script src="vendor/UIBootstrap/ui-bootstrap-tpls-1.0.0.min.js" type="text/javascript"></script>
+        <script src="vendor/UIBootstrap/ui-bootstrap-tpls-2.2.0.min.js" type="text/javascript"></script>
         <script src="vendor/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="vendor/moment/moment-with-locales.min.js" type="text/javascript"></script>
+        <script src="vendor/angular/angular-locale_es-es.js" type="text/javascript"></script>
         <!-- ------------------------------- -->  
         <script src="js/app.js" type="text/javascript"></script>
         <script src="js/services.js" type="text/javascript"></script>
