--- a/public_html/js/documento/newedit.html
+++ b/public_html/js/documento/newedit.html
@@ -32,6 +32,13 @@ THE SOFTWARE.
                 <div class="panel panel-default">
                     <div class="panel-heading" style="font-family:Oswald , serif;"  ng-include="'js/system/header.html'"></div>
                     <div class="panel-body"  ng-cloak>
+                        <!-- debug
+                        <div class="row">
+                            <div class="col-md-12">
+                                json: {{obj|json}}
+                            </div>
+                        </div>
+                        -->
                         <ng-form name="outerForm" class="form-horizontal" ng-show="result == null">
 
                             <div id="id-group" class="form-group">
@@ -99,61 +106,84 @@ THE SOFTWARE.
 
                             </div>
 
-                            <div id="alta-group" class="form-group">
-                                <label class="col-sm-2 control-label" for="alta">Fecha de alta:</label>
+                            <div id="alta-group" class="form-group" 
+                                 ng-class="{'has-error': (outerForm.alta.$error.required
+                                                     || !obj.alta)
+                                                     && !outerForm.alta.$pristine}">
+                                <label class="col-sm-2 control-label" for="alta">Fecha de modificación:</label>
                                 <div class="control col-sm-3">
                                     <div class="input-group date" id="alta_group">
                                         <input type="text" 
                                                class="form-control" 
-                                               ng-model="obj.alta"
-                                               placeholder="Fecha de alta"
-                                               starting-day="1" 
-                                               uib-datepicker-popup="dd/MM/yyyy"                             
+                                               placeholder="Fecha de último alta"
+                                               uib-datepicker-popup="dd/MM/yyyy" 
+                                               ng-model="obj.alta" 
                                                is-open="popup1.opened" 
-                                               min-date="minDate" 
-                                               max-date="maxDate" 
                                                datepicker-options="dateOptions1" 
-                                               date-disabled="disabled(date, mode)"                            
-                                               close-text="Cerrar" 
-                                               alt-input-formats="altInputFormats" 
                                                ng-required="true" 
-                                               />
+                                               close-text="Close"
+                                               id="alta"
+                                               name="alta"                                      
+                                               />                               
                                         <span class="input-group-addon" ng-click="open1()">
                                             <i class="glyphicon glyphicon-calendar"></i>
-                                        </span>
+                                        </span>                                        
+                                        <!-- <span class="help-block" ng-show="!outerForm.alta.$pristine && !outerForm.alta.$error.pattern">El campo fecha de alta debe ser una fecha en formato dd/mm/yyyy</span>   -->
                                     </div>
+                                    <span class="help-block" ng-show="!outerForm.alta.$pristine && outerForm.alta.$error.required">El campo fecha de alta es obligatorio</span>
+                                    <em>{{obj.alta| date:'fullDate' }}</em>
                                 </div>
                             </div>
 
 
-                            <div id="cambio-group" class="form-group">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                            <div id="cambio-group" class="form-group" 
+                                 ng-class="{'has-error': (outerForm.cambio.$error.required
+                                                     || !obj.cambio)
+                                                     && !outerForm.cambio.$pristine}">
                                 <label class="col-sm-2 control-label" for="cambio">Fecha de modificación:</label>
                                 <div class="control col-sm-3">
                                     <div class="input-group date" id="cambio_group">
                                         <input type="text" 
                                                class="form-control" 
-                                               ng-model="obj.cambio" 
                                                placeholder="Fecha de último cambio"
-                                               starting-day="1" 
-                                               uib-datepicker-popup="dd/MM/yyyy"                            
+                                               uib-datepicker-popup="dd/MM/yyyy" 
+                                               ng-model="obj.cambio" 
                                                is-open="popup2.opened" 
-                                               min-date="minDate" 
-                                               max-date="maxDate" 
                                                datepicker-options="dateOptions2" 
-                                               date-disabled="disabled(date, mode)"                             
-                                               close-text="Cerrar" 
-                                               alt-input-formats="altInputFormats" 
-                                               ng-required="true"                           
-                                               />
+                                               ng-required="true" 
+                                               close-text="Close"
+                                               id="cambio"
+                                               name="cambio"                                      
+                                               />                               
                                         <span class="input-group-addon" ng-click="open2()">
                                             <i class="glyphicon glyphicon-calendar"></i>
-                                        </span>
+                                        </span>                                        
+                                        <!-- <span class="help-block" ng-show="!outerForm.cambio.$pristine && !outerForm.cambio.$error.pattern">El campo fecha de cambio debe ser una fecha en formato dd/mm/yyyy</span>   -->
                                     </div>
+                                    <span class="help-block" ng-show="!outerForm.cambio.$pristine && outerForm.cambio.$error.required">El campo fecha de cambio es obligatorio</span>
+                                    <em>{{obj.cambio| date:'fullDate' }}</em>
                                 </div>
                             </div>
 
 
-                            <div id="hits-group" class="form-group"
+                            <div id="hits-group" class="form-group" 
                                  ng-class="{'has-error': (outerForm.hits.$error.required
                                                      || outerForm.hits.$error.validatemin
                                                      || outerForm.hits.$error.validatemax
@@ -173,7 +203,7 @@ THE SOFTWARE.
                                            numbersOnly
                                            validatemin="1" 
                                            validatemax="4000"
-                                           required>
+                                           required />
                                     <span class="help-block" ng-show="!outerForm.hits.$pristine && outerForm.hits.$error.required">El campo contenido es obligatorio</span>
                                     <span class="help-block" ng-show="!outerForm.hits.$pristine && outerForm.hits.$error.pattern">El campo contenido debe ser un número entero</span>                
                                     <span class="help-block" ng-show="!outerForm.hits.$pristine && outerForm.hits.$error.validatemin">El campo contenido debe ser un número entero mayor que 0</span>
@@ -185,7 +215,11 @@ THE SOFTWARE.
 
 
                             <!-- falta chequear la validez-->
-                            <div class="form-group"  ng-class="{'has-error': (outerForm.obj_usuario.$error.required || outerForm.obj_usuario.$error.exists || outerForm.obj_usuario.$error.validatemin)}">                                                                                                                                   
+                            <div class="form-group" 
+                                 ng-class="{'has-error': (outerForm.obj_usuario.$error.required ||
+                                                     outerForm.obj_usuario.$error.exists ||
+                                                     outerForm.obj_usuario.$error.validatemin)
+                                                     && !outerForm.obj_usuario.$pristine}">                                                                                                                                   
                                 <label class="col-sm-2 control-label" for="obj_usuario">Usuario:</label>
                                 <div class="control col-sm-3">
                                     <div class="input-group foreign" id="obj_usuario_group">
@@ -193,19 +227,23 @@ THE SOFTWARE.
                                             <span class="glyphicon glyphicon-search">
                                             </span>
                                         </span>                                        
-                                        <input type="text"  ng-model="obj.obj_usuario.id" validatemin="1"  ng-required="true"  aria-describedby="basic-addon2" class="form-control" id="obj_usuario" name="obj_usuario" type="text" size="5" maxlength="5">                                        
+                                        <input type="text" ng-change="obj_usuario_change" ng-model="obj.obj_usuario.id" validatemin="1" ng-required="true"  aria-describedby="basic-addon2" class="form-control" id="obj_usuario" name="obj_usuario" type="text" size="5" maxlength="5">                                        
                                         <span class="input-group-addon">
                                             <linkusuario source="obj.obj_usuario"></linkusuario>                       
                                         </span>                                       
                                     </div>
-                                    <span class="help-block" ng-show="outerForm.obj_usuario.$error.required">El campo es obligatorio</span>
-                                    <span class="help-block" ng-show="outerForm.obj_usuario.$error.validatemin">Debes elegir un usuario</span>
-                                    <span class="help-block" ng-show="outerForm.obj_usuario.$error.exists">El usuario no existe</span>
+                                    <span class="help-block" ng-show="!outerForm.obj_usuario.$pristine && outerForm.obj_usuario.$error.required">El campo es obligatorio</span>
+                                    <span class="help-block" ng-show="!outerForm.obj_usuario.$pristine && outerForm.obj_usuario.$error.validatemin">Debes elegir un usuario</span>
+                                    <span class="help-block" ng-show="!outerForm.obj_usuario.$pristine && outerForm.obj_usuario.$error.exists">El usuario no existe</span>
                                 </div>
                             </div>                                                                
 
 
-                            <div class="form-group" ng-class="{'has-error': (outerForm.obj_tipodocumento.$error.required || outerForm.obj_tipodocumento.$error.exists || outerForm.obj_tipodocumento.$error.validatemin)}">                                                                                                                                   
+                            <div class="form-group" 
+                                 ng-class="{'has-error': (outerForm.obj_tipodocumento.$error.required ||
+                                                     outerForm.obj_tipodocumento.$error.exists ||
+                                                     outerForm.obj_tipodocumento.$error.validatemin)
+                                                     && !outerForm.obj_tipodocumento.$pristine}">                                                                                                                                   
                                 <label class="col-sm-2 control-label" for="obj_tipodocumento">Tipo de documento:</label>
                                 <div class="control col-sm-3">
                                     <div class="input-group foreign" id="obj_tipodocumento_group">
@@ -220,9 +258,9 @@ THE SOFTWARE.
                                             </a>
                                         </span>
                                     </div>
-                                    <span class="help-block" ng-show="outerForm.obj_tipodocumento.$error.required">El campo es obligatorio</span>
-                                    <span class="help-block" ng-show="outerForm.obj_tipodocumento.$error.validatemin">Debes elegir un tipo de documento</span>
-                                    <span class="help-block" ng-show="outerForm.obj_tipodocumento.$error.exists">El tipo de documento no existe</span>
+                                    <span class="help-block" ng-show="!outerForm.obj_tipodocumento.$pristine && outerForm.obj_tipodocumento.$error.required">El campo es obligatorio</span>
+                                    <span class="help-block" ng-show="!outerForm.obj_tipodocumento.$pristine && outerForm.obj_tipodocumento.$error.validatemin">Debes elegir un tipo de documento</span>
+                                    <span class="help-block" ng-show="!outerForm.obj_tipodocumento.$pristine && outerForm.obj_tipodocumento.$error.exists">El tipo de documento no existe</span>
                                 </div>
                             </div>
 
