--- a/public_html/js/documento/view.html
+++ b/public_html/js/documento/view.html
@@ -61,9 +61,9 @@ THE SOFTWARE.
                                                 <a href="#/tipodocumento/view/{{bean.obj_tipodocumento.id}}">{{bean.obj_tipodocumento.descripcion}}</a>
                                             </td>
                                         </tr> 
-                                        <tr><td>publicado</td><td>{{bean.publicado}}</td></tr> 
-                                        <tr><td>portada</td><td>{{bean.portada}}</td></tr> 
-                                        <tr><td>destacado</td><td>{{bean.destacado}}</td></tr> 
+                                        <tr><td>publicado</td><td ng-bind-html="bean.publicado|booleanizate"></td></tr> 
+                                        <tr><td>portada</td><td ng-bind-html="bean.portada|booleanizate"></td></tr> 
+                                        <tr><td>destacado</td><td ng-bind-html="bean.destacado|booleanizate"></td></tr> 
                                     </tbody>
                                 </table>  
                                 <div class="text-right" > 
