--- a/public_html/index.html
+++ b/public_html/index.html
@@ -49,7 +49,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <!-- Menu -->
-        <nav class="navbar navbar-default navbar-fixed-top" ng-controller="HeaderController">
+        <nav class="navbar navbar-default navbar-fixed-top" ng-controller="IndexController">
             <div class="container-fluid" ng-include="'js/system/menu.html'"></div>
         </nav>
 
