timeout obj_tipodocumento

--- a/public_html/js/system/header.html
+++ b/public_html/js/system/header.html
@@ -30,5 +30,6 @@ THE SOFTWARE.
     <div class="col-xs-9 text-left">
         <h1 id="broth_title">{{title}}</h1>
     </div>
-    <div class="col-xs-3 text-right" id="broth_operationicon"><i class="fa {{icon}} fa-5x"></i></div>
+    <div class="col-xs-3 text-right" id="broth_operationicon" ng-show="!loading"><i class="fa {{icon}} fa-5x"></i></div>
+    <div class="col-xs-3 text-right" id="broth_operationicon" ng-show="loading"><img id="mySpinner" src="images/ajax-loading.gif" /></div>
 </div>
